finished server processing of articles
